ingresses/jenkins.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: logic
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - jenkins.logicking.co
      secretName: jenkins-tls
  rules:
    - host: jenkins.logicking.co
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins
              servicePort: 80
