ingresses/logic-frontend.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: logic-frontend
  namespace: logic
spec:
  rules:
    - host: logicking.co
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: logic-frontend
              servicePort: 80
